mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: keycloak
spec:
  ports:
   - port: 3306
  selector:
    app: mysql
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: keycloak
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0.21
          ports: 
            - containerPort: 3306
