ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
spec:
  rules:
  - host: keycloak.com
    http:
      paths:
      - backend:
          serviceName: keycloak-service
          servicePort: 8080
        path: /
